--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   
 </head>
 <body>
-  <div class="background" > 
+  <div >
+    
       <header class="header js-scroll">
         <div>
         <img src="./img/739f1fbb30565e9cb1d880ad91447c5e 1.svg" alt="Logo" >
@@ -37,6 +38,7 @@
 
                                         <!-- Main -->
   <main class="main">
+    <img src="./img/fundo.png" alt="fundo" class="background"> 
     <article>
     <section class="textos-main ">
       <p>Um mundo mais sombrio e primitivo</p>
